Resummarise today's contributions.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2011-03-12  18:06  Reuben Thomas <rrt@sc3d.org>
 
-	* Remove duplicate BUGS section from man page.
+	* Improve file.man (remove BUGS, present email addresses consistently).
 
 2011-03-07  19:38  Christos Zoulas <christos@zoulas.com>
 
