--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-04-20  14:20  Christos Zoulas <christos@zoulas.com>
+
+	* Fix read past allocated memory caused by double-incrementing
+	  a pointer in a loop (reported by Roberto Maar)
+
 2011-03-30  15:45  Christos Zoulas <christos@zoulas.com>
 
 	* Fix cdf string buffer setting (Sven Anders)
