mention recent changes

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
-2011-04-20  14:20  Christos Zoulas <christos@zoulas.com>
+2011-05-10  20:57  Christos Zoulas <christos@zoulas.com>
 
+	* remove patchlevel.h
 	* Fix read past allocated memory caused by double-incrementing
 	  a pointer in a loop (reported by Roberto Maar)
 
