PR/134: Don't seek all overr the place when reading elf files, homogenize the seeking to seek to the proper offset for each header structure reading instead of saving and restoring offsets in random places.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-08-17  14:32  Christos Zoulas <christos@zoulas.com>
+
+	* Fix ELF lseek(2) madness. Inspired by PR/134 by Jan Kaluza
+
 2011-07-12  12:32  Reuben Thomas <rrt@sc3d.org>
 
 	* Fix detection of Zip files (Mantis #128).
