--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-09-22  12:57  Christos Zoulas <christos@zoulas.com>
+
+	* Python3 binding fixes from Kelly Anderson
+
 2011-09-20  11:32  Christos Zoulas <christos@zoulas.com>
 
 	* If a string type magic entry is marked as text or binary
