--- a/doc/file.man
+++ b/doc/file.man
@@ -1,4 +1,4 @@
-.\" $File: file.man,v 1.97 2011/10/17 20:18:05 christos Exp $
+.\" $File: file.man,v 1.98 2011/12/08 12:12:46 rrt Exp $
 .Dd October 17, 2011
 .Dt FILE __CSECTION__
 .Os
@@ -192,7 +192,7 @@ option).
 .It encoding
 Different text encodings for soft magic tests.
 .It tokens
-Looks for known tokens inside text files.
+Ignored for backwards compatibility.
 .It cdf
 Prints details of Compound Document Files.
 .It compress
