--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-12-16  16:33  Reuben Thomas <rrt@sc3d.org>
+
+	* Add magic for /usr/bin/env Perl scripts
+	* Weaken generic script magic to avoid clashing with
+	language-specific magic.
+
 2011-12-08  13:37  Reuben Thomas <rrt@sc3d.org>
 
 	* Simplify if (p) free(p) to free(p).
