--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-12-15  12:17  Chris Metcalf <cmetcalf@tilera.com>
+
+	* Support Tilera architectures (tile64, tilepro, tilegx).
+
 2011-12-16  16:33  Reuben Thomas <rrt@sc3d.org>
 
 	* Add magic for /usr/bin/env Perl scripts
