--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-01-06  11:20  Christos Zoulas <christos@zoulas.com>
+
+	* add magic_version function and constant
+
 2012-12-19   8:47  Christos Zoulas <christos@zoulas.com>
 
 	* Only print elf capabilities for archs we know (Jan Kaluza)
