--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-01-25  18:05  Christos Zoulas <christos@zoulas.com>
+
+	* change mime description size from 64 to 80 to accommodate OOXML.
+
 2013-01-11  14:50  Christos Zoulas <christos@zoulas.com>
 
 	* Warn about inconsistent continuation levels.
