--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-02-26  19:28  Christos Zoulas <christos@zoulas.com>
+
+	* limit recursion level for mget
+	* fix pread() related breakage in cdf
+	* handle offsets properly in recursive "use"
+
 2013-02-18  10:39  Christos Zoulas <christos@zoulas.com>
 
 	* add elf reading of debug info to determine if file is stripped
