--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+
+2013-05-28  17:25  Christos Zoulas <christos@zoulas.com>
+	
+	* Fix spacing issues in softmagic and elf (Jan Kaluza)
+
 2013-05-02  18:00  Christos Zoulas <christos@zoulas.com>
 
 	* Fix segmentation fault with multiple magic_load commands.
