--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-11-06  14:40  Christos Zoulas <christos@zoulas.com>
+
+	* fix erroneous non-zero exit code from non-existant file and message
+
 2013-10-29  14:25  Christos Zoulas <christos@zoulas.com>
 
 	* add CDF MSI file detection (Guy Helmer)
